--- a/app/components/ngChartTwo/ngChartTwo.template.html
+++ b/app/components/ngChartTwo/ngChartTwo.template.html
@@ -1,14 +1,11 @@
 
 
-<div class="chart">
+<div class="barchart">
   
-<canvas id="line" class="chart chart-line" 
-  chart-data="data"
-  chart-labels="labels" 
-  chart-legend="true" 
-  chart-series="series"
-  chart-options="options"
-  chart-click="onClick" >
-</canvas> 
-  
+<canvas id="bar" class="chart chart-bar"
+  chart-data="data2" chart-labels="labels2" chart-series="series2">
+    </canvas> 
+    
+ <input type="text" placeholder="Din års här" ng-model = "userValue">
+ <input type="submit" ng-click = "ChartTwoController.addUserValue(userValue)" value="lägg till">  
 </div>
