add charts with statik value

--- a/app/components/ngChart/ngChart.template.html
+++ b/app/components/ngChart/ngChart.template.html
@@ -1,7 +1,7 @@
 
 
 <div class="chart">
-  
+<div class="panel-heading">Antal män/kvinnor som är mottagare utav föräldrarpenning 2000-2014</div>
 <canvas id="line" class="chart chart-line" 
   chart-data="data"
   chart-labels="labels" 
