--- a/app/components/ngChartOne/ngChartOne.template.html
+++ b/app/components/ngChartOne/ngChartOne.template.html
@@ -1,13 +1,13 @@
 
 
 <div class="chart">
-  
+<div class="panel-heading">Män/kvinnors medel årslöner 2000-2014</div>
 <canvas id="line" class="chart chart-line" 
-  chart-data="data"
-  chart-labels="labels" 
+  chart-data="data1"
+  chart-labels="labels1" 
   chart-legend="true" 
-  chart-series="series"
-  chart-options="options"
+  chart-series="series1"
+  chart-options="options1"
   chart-click="onClick" >
 </canvas> 
   
