--- a/app/components/ngChartTwo/ngChartTwo.template.html
+++ b/app/components/ngChartTwo/ngChartTwo.template.html
@@ -1,7 +1,7 @@
 
 
 <div class="barchart">
-  
+<div class="panel-heading">Jämför din årslön år 2014 med medel årslöner för män respektive kvinnor</div>
 <canvas id="bar" class="chart chart-bar"
   chart-data="data2" chart-labels="labels2" chart-series="series2">
     </canvas> 
