--- a/app/egen.css
+++ b/app/egen.css
@@ -2,3 +2,12 @@ body{font-family:Lora,'Times New Roman',serif;font-size:20px;color:#404040}p{lin
 
 img.logo {display: block;
     margin-left: 150px;}
+    
+.my-input {
+  transition:0.5s linear all;
+  background: white;
+}
+.my-input .ng-invalid {
+  background: red;
+  color:white;
+}
