[FEATURE] fixes chart styles

--- a/app/components/ngChart/ngChart.template.html
+++ b/app/components/ngChart/ngChart.template.html
@@ -7,7 +7,7 @@
   chart-labels="labels" 
   chart-legend="true" 
   chart-series="series"
-  chart-options="options"
+  chart-options="{datasetFill : false, datasetStrokeWidth : 4, pointDotRadius : 6,}"
   chart-click="onClick" >
 </canvas> 
   
