--- a/app/components/ngChartOne/ngChartOne.template.html
+++ b/app/components/ngChartOne/ngChartOne.template.html
@@ -7,7 +7,7 @@
   chart-labels="labels1" 
   chart-legend="true" 
   chart-series="series1"
-  chart-options="options1"
+  chart-options="{datasetFill : false, datasetStrokeWidth : 4, pointDotRadius : 6,}"
   chart-click="onClick" >
 </canvas> 
   
