text content added

--- a/app/components/ngChart/ngChart.template.html
+++ b/app/components/ngChart/ngChart.template.html
@@ -1,7 +1,19 @@
 
-
+<p>
+Tanken med detta projekt är att opartiskt jämföra utvecklingen av jämställdhet i svenska hem och i svenska samhället. 
+<br>
+<br>
+Vi har valt att använda föräldrapenning, närmare bestämt antal utbetalda nettodagar som representation för skillnaden mellan män och kvinnor inom hushållen. Samt män respektive kvinnors årslöner som representerar skillnaden i samhället och i organisationer. Och även hur de här två faktorerna påverkar varandra. Väljer man vem som ska vara hemma med barnen baserat på lön?
+<br>
+<br>
+Föräldrapenning är pengar man får för att vara hemma med sitt barn istället för att jobba, studera eller söka jobb. Föräldrapenning betalas ut i 480 dagar för ett barn. 390 dagar grundas på den inkomst man har, samma summa som sjukpenningnivån. De 90 dagar som återstår får man lägsta nivån av ersättning, 180kr per dag. Sedan 1/1 2014 är reglerna så att man kan dela dagarna rakt av.
+Det blir totalt 240 dagar vardera, där 195 dagar är på sjukpenningnivå och 45 på lägsta nivå. Av de 195 dagar på sjukpenningnivå så måsta varje förälder ta ut 60 dagar, resterande 135 kan avstås till den andra och likaså med de 45 på lägsta nivå.
+<br> 
+Hur har hushållen i Sverige fördelat detta under 2000-talet?<br>
+Nedan ser ni skillnaderna mellan män och kvinnor när det kommer till antal uttagna nettodagar från 2000-2014. År 2000 tog kvinnor ut 87,6% respektive män 12,4% utav totala uttagna nettodagar och år 2014 tog kvinnor ut 74,7% respektive män 25,3%.
+</p>
 <div class="chart">
-<div class="panel-heading">Antal män/kvinnor som är mottagare utav föräldrarpenning 2000-2014</div>
+    <div class="panel-heading"><h4>Föräldrapenning, antal uttagna nettodagar män respektive kvinnor 2000-2014</h4></div>
 <canvas id="line" class="chart chart-line" 
   chart-data="data"
   chart-labels="labels" 
