--- a/app/components/ngChartOne/ngChartOne.template.html
+++ b/app/components/ngChartOne/ngChartOne.template.html
@@ -1,7 +1,11 @@
-
+<p>
+Hur sätts löner i Sverige? Vad för regler gäller?<br>
+Löner ska vara individuella och skilda. Marknaden och lokala parternas uppfattning om arbetsgivarens lönestruktur påverkar också individernas löner. Alla anställda ska veta hur lönen sätts och vilka krav som gäller för att få en löneutveckling. Anställda tillsammans med arbetsgivaren ansvarar för kompetensutveckling. Det är väldigt viktigt att bedömningen av de faktorer som påverkar löneutvecklingen sker på så opartiska grunder som möjligt. Faktorer för individens lön ska vara könsneutral.<br>
+Nedan ser ni skillnaden mellan kvinnor och mäns årslöner från ålder 20-64 år 2000-2014. år 2000 tjänade en kvinna i genomsnitt 71,1% av vad en man tjänade och år 2014 tjänade en kvinna i genomsnitt 77,3% av vad en man tjänade. Även om vi tar med faktorer så som skillnad i ålder, utbildning, sektor och yrke så finns det en oförklarad löneskillnad på 6%. Den har legat på det i några år och verkar in minska, verkar möjligen öka.    
+</p>
 
 <div class="chart">
-<div class="panel-heading">Män/kvinnors medel årslöner 2000-2014</div>
+<div class="panel-heading"><h4>Män/kvinnors medel årslöner 2000-2014</h4></div>
 <canvas id="line" class="chart chart-line" 
   chart-data="data1"
   chart-labels="labels1" 
