--- a/app/components/ngChartTwo/ngChartTwo.template.html
+++ b/app/components/ngChartTwo/ngChartTwo.template.html
@@ -1,5 +1,13 @@
+<p>
+<br>
+Jämför gärna hur du och din partner ligger till i den svenska jämställdheten. 
+<br>
+Hur skulle ni fördela er föräldrapenning?
+<br>
+Är löneskillnaden en viktig faktor i valet?
+</p>
 <div class="barchart">
-<div class="panel-heading">Jämför din årslön år 2014 med medel årslöner för män respektive kvinnor</div>
+    <div class="panel-heading"><h4>Jämför din årslön år 2014 med medel årslöner för män respektive kvinnor</h4></div>
 <canvas id="bar" 
   class="chart chart-bar"
   chart-data="data2" 
@@ -14,7 +22,7 @@
  
    <input 
    required
-   placeholder="Din års här" 
+   placeholder="Din årslön här" 
    ng-model = "yourValue"
    ng-pattern="/^\d+$/" 
    aria-describedby="inputDescription" />
@@ -35,7 +43,7 @@
  
   <input 
     required
-    placeholder="Din sambos års lön" 
+    placeholder="Din partners årslön" 
     ng-model = "partnerValue2"
     ng-pattern="/^\d+$/" 
     aria-describedby="inputDescription" />
@@ -63,3 +71,12 @@
   </form>-->
  
 </div>
+<h4>Referens:</h4>
+<p>
+<a href="http://www.ledarna.se/Chefsguider/Jamstalldhet/Lon-och-kon/">http://www.ledarna.se/Chefsguider/Jamstalldhet/Lon-och-kon/
+</a>
+<a href="http://www.scb.se/sv_/hitta-statistik/statistik-efter-amne/levnadsforhallanden/jamstalldhet/jamstalldhetsstatistik/12252/12259/behallare-for-press/375659/">http://www.scb.se/sv_/hitta-statistik/statistik-efter-amne/levnadsforhallanden/jamstalldhet/jamstalldhetsstatistik/12252/12259/behallare-for-press/375659/</a>
+<a href="http://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__SF__SF0101/ForaldraPenning/table/tableViewLayout1/?rxid=7a759bb0-6a0e-4fc1-a857-43a72f3ba4cb">http://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__SF__SF0101/ForaldraPenning/table/tableViewLayout1/?rxid=7a759bb0-6a0e-4fc1-a857-43a72f3ba4cb</a>
+<a href="http://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__HE__HE0110__HE0110A/InkAvTjanst/table/tableViewLayout1/?rxid=2f2be207-60c6-4a99-b502-c72ff9a27e59">http://www.statistikdatabasen.scb.se/pxweb/sv/ssd/START__HE__HE0110__HE0110A/InkAvTjanst/table/tableViewLayout1/?rxid=2f2be207-60c6-4a99-b502-c72ff9a27e59</a>
+<a href="http://www.dn.se/ekonomi/jobb-karriar/drygt-85-ar-kvar-till-jamstallda-loner/">http://www.dn.se/ekonomi/jobb-karriar/drygt-85-ar-kvar-till-jamstallda-loner/</a>
+<a href="http://www.unionen.se/sites/default/files/771_loneavtal_2013-2016.pdf">http://www.unionen.se/sites/default/files/771_loneavtal_2013-2016.pdf</a></p>
