--- a/app/egen.css
+++ b/app/egen.css
@@ -23,3 +23,10 @@ img.logo {
 .partnersSalary .submit-invalid {
   opacity: 0.5;
 }
+
+.center {
+    float:none;
+    display:inline-block;
+    vertical-align:middle;
+    margin-right:-4px;
+}
