[FEATURE] last changes

--- a/app/components/ngChart/ngChart.template.html
+++ b/app/components/ngChart/ngChart.template.html
@@ -13,7 +13,7 @@ Hur har hushållen i Sverige fördelat detta under 2000-talet?<br>
 Nedan ser ni skillnaderna mellan män och kvinnor när det kommer till antal uttagna nettodagar från 2000-2014. År 2000 tog kvinnor ut 87,6% respektive män 12,4% utav totala uttagna nettodagar och år 2014 tog kvinnor ut 74,7% respektive män 25,3%.
 </p>
 <div class="chart">
-    <div class="panel-heading"><h4>Föräldrapenning, antal uttagna nettodagar män respektive kvinnor 2000-2014</h4></div>
+    <div class="panel-heading"><h4>Föräldrapenning, antal uttagna nettodagar för män respektive kvinnor 2000-2014</h4></div>
 <canvas id="line" class="chart chart-line" 
   chart-data="data"
   chart-labels="labels" 
